--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
 
 
       <text id="tradeStats" class="trade-stats greyed-out">Trade Counter: <span id="tradeCount">0</span></text>
-      <div id="saveStatus" class="greyed-out">Last Save: ~</div>
+      <div id="saveStatus" class="greyed-out">Loading...</div>
+      <span class="greyed-out" id="last-updated">Loading...</span></h>
 
 
 
