--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
       <button onclick="resetGameState()"><i class="fa fa-trash-o"></i> | Reset Save</button>
       <div class="nav-separator"></div>
       <button id="openAboutBtn"><i class="fa fa-book"></i> | About</button>
-
       <button id="openDevLogBtn"><i class="fa fa-code" aria-hidden="true"></i> | Dev</button>
       <div class="nav-separator"></div>
     </div>
@@ -418,6 +417,8 @@
   <script src="./js/trade_contracts.js" defer></script>
 
   <link rel="shortcut icon" href="images/Fav.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/Fav.png">
+
   <!--<div> Icons made by <a href="https://www.flaticon.com/authors/artifex" title="Artifex"> Artifex 
   </a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com'</a></div>-->
 
