--- a/index.html
+++ b/index.html
@@ -450,9 +450,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
 
-
-  <script src="./js/main.js" defer></script>
+  <script src="./js/config.js" defer></script>
+  <script src="./js/market.js" defer></script>
+  <script src="./js/npc.js" defer></script>
+  <script src="./js/state.js" defer></script>
+  <script src="./js/travel.js" defer></script>
+  <script src="./js/ui.js" defer></script>
+  <script src="./js/utils.js" defer></script>
   <script src="./js/trade_contracts.js" defer></script>
+  <script src="./js/core.js" defer></script>
 
   <link rel="shortcut icon" href="images/Fav.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/Fav.png">
