--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Custom Styles -->
-  <link href="./css/styles.css" rel="stylesheet">
+  <link href="./css/NEW.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <div id="atlas-scroll-wrapper">
@@ -29,7 +29,7 @@
     <div id="loadingOverlay">
       <div class="loading-content">
         <output class="spinner-border text-info mb-3" name="warpStatus"></output>
-        <div class="nav-logo resource-name"><strong>ΛTLΛS | ΞQUINOX™</strong><br><small>An Interstellar Trading
+        <div class="nav-logo highlight"><strong>ΛTLΛS | ΞQUINOX™</strong><br><small>An Interstellar Trading
             Company</small> </div>
         <button type="button" class="btn btn-danager" onclick="resetGameState()">Emergency Save Reset</button>
 
@@ -182,13 +182,12 @@
 
         <section class="console-wrapper2 mb-3">
           <small>
-            <b>Credits:</b> <span id="credits">~</span>ᶜ<br>
-            <b>Fuel:</b> <span id="fuel">~</span>ᵣ / 1000ᵣ<br>
-
-            <b>Inventory:</b> <span id="inventoryCount">~</span>ᵣ</text><br>
-            <b>ΛΞ Vault:</b> <span id="vaultCount">~</span>ᵣ</text><br>
-
-
+            <b>Credits:</b> <span id="credits" class="text-success">~</span><text class="text-success">ᶜ</text><br>
+            <b>Fuel:</b> <span class="text-warning" id="fuel">~</span><text class="text-warning">ᵣ</text> / 1000ᵣ<br>
+            <text class="disabled">
+              <b>Inventory:</b> <span id="inventoryCount">~</span>ᵣ</text><br>
+              <b>ΛΞ Vault:</b> <span id="vaultCount">~</span>ᵣ</text><br>
+            </text>
           </small>
         </section>
 
@@ -202,7 +201,7 @@
 
           <select id="travelSearch" class="form-select mb-2">
           </select>
-          <button id="travelButton" class="btn btn-outline-warning w-100" onclick="travel()">Warp</button>
+          <button id="travelButton" class="btn btn-outline-info w-100" onclick="travel()">~</button>
           <button id="refuelButton" class="btn btn-outline-warning w-100 mb-3" onclick="refuel()">Refuel</button>
         </section>
 
@@ -219,7 +218,7 @@
 
           <div style="text-align: center;"><small><text> ~</text><span id="buybreakdown">~ </span> <span
                 style="font-size: 0.55rem; color: #dc3545;"><i class="fa fa-exclamation-triangle"
-                  aria-hidden="true"></i> | Live Market Estimate</span></small><br></div>
+                  aria-hidden="true"></i> | Estimate</span></small><br></div>
 
           <div class="d-flex gap-2">
 
@@ -228,8 +227,8 @@
           </div>
         </section>
 
-        <text style="color: #ffc107;">Game Last Saved: </text><br>
-        <div id="saveStatus" class="greyed-out">Loading...</div>
+        <text style="color: #444446;">Game Last Saved: </text><br>
+        <div id="saveStatus" style="color: #444446;">Loading...</div>
 
 
 
@@ -249,7 +248,7 @@
 
 
             <div class="d-flex justify-content-between align-items-center mb-2">
-              <h5 class="mb-0">Current System: <span id="location2" class="resource-name">~</span></h5>
+              <h5 class="mb-0" style="font-size: medium;"><b>Current System: </b><span id="location2" class="resource-name mb-0">~</span></h5>
 
 
 
@@ -278,7 +277,7 @@
               <table id="marketHeadingTable" class="table table-dark table-sm text-center"></table>
               <table id="spreadTable" class="table table-dark table-sm text-center"></table>
 
-              <div id="market-scroll-wrapper">
+              <div id="market-scroll-wrapper" style="height: 900px; overflow-y: auto;">
                 <table id="marketTable" class="table table-dark table-sm text-center market-main-table"></table>
               </div>
 
