--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <span class="text-muted small">| System specializes in this resource.</span>
               </div>
               <div>
-                <span style="color: #ffc107;">⚠?!</span>
+                <span style="color: #ffc107;">⦵</span>
                 <span class="text-muted small">| Market data degrades over distance, expect some inaccuracies and corruption from
                   further away systems.</span>
               </div>
