--- a/index.html
+++ b/index.html
@@ -218,8 +218,7 @@
           <span id="sellbreakdown" style="display: none;">~</span>
 
           <div style="text-align: center;"><small><text> ~</text><span id="buybreakdown">~ </span> <span
-                style="font-size: 0.55rem; color: #dc3545;"><i class="fa fa-exclamation-triangle"
-                  aria-hidden="true"></i> | Estimate</span></small><br></div>
+                style="font-size: 0.55rem; color: #dc3545;"><i class="fa fa-exclamation-triangle"aria-hidden="true"></i> | Estimate</span></small><br></div>
 
           <div class="d-flex gap-2">
 
@@ -291,15 +290,15 @@
                 <span class="text-muted small">| System specializes in this resource.</span>
               </div>
               <div>
-                <span style="color: #ffc107;">⦵</span>
+                <span style="color: #ffc107;">X</span>
                 <span class="text-muted small">| Market data degrades over distance, expect some inaccuracies and corruption from
                   further away systems.</span>
               </div>
+              <div>
+                <span style="color: #ffc107;">N/A</span>
+                <span class="text-muted small">| No established market for this resource.</span>
+              </div>
             </div>
-
-
-
-
         </section>
 
 
