--- a/index.html
+++ b/index.html
@@ -260,10 +260,11 @@
 
 
 
+                  
 
 
               <div id="viewModeButtons">
-                <button onclick="openLeaderboard()" class="btn btn-outline-secondary">Stock Market</button>
+                <button id="leaderboardBtn" class="btn btn-outline-secondary">Stock Market</button>
                 <button id="openTariffBtn" class="btn btn-outline-secondary">Tax Rates</button>
 
 
