Removed Mobile Block
Misc UI

--- a/index.html
+++ b/index.html
@@ -19,14 +19,6 @@
 
   <body>
 
-    <div id="mobile-blocker">
-      <div class="mobile-blocker-content">
-        <h2>🚫 Unsupported Screen Size</h2>
-        <p>This game is best experienced on larger screens. Please use a tablet or desktop device.</p>
-      </div>
-    </div>
-
-
     <div id="loadingOverlay">
       <div class="loading-content">
         <output class="spinner-border text-info mb-3" name="warpStatus"></output>
@@ -495,7 +487,10 @@
     <script src="./js/utils.js" defer></script>
     <script src="./js/trade_contracts.js" defer></script>
     <script src="./js/ui.js" defer></script>
-    <script src="./js/core.js" defer></script>
+    <script src="./js/core.js" defer>
+      
+    </script>
+
 
     <script>
       document.addEventListener('DOMContentLoaded', () => {
